<resources>
    <string name="app_name">Ice Cream Delivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_items">Items</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_select_shop">Select Shop</string>
    <string name="menu_return_items">Return Items</string>
    <string name="menu_all_invoices">All Invoices</string>
    <string name="menu_download_data">Download Data</string>
    <string name="menu_upload_data">Upload Data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>
